--- a/Lab4.5/pom.xml
+++ b/Lab4.5/pom.xml
@@ -6,6 +6,12 @@
   <packaging>war</packaging>
   
   <dependencies>
+	<dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+  	</dependency>
+
   	<dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
